fixed whitespace issue on lobby (in viewscreens less than 760 px)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -276,6 +276,11 @@ h2 {
     opacity: .9;
 }
 
+@media (max-width: 767px) {
+  body {
+    padding-left: 0;
+    padding-right: 0;
+  }
 /* ==========================================================================
    Helper classes
    ========================================================================== */
